--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,11 @@
             "homepage": "http://markjaquith.com/"
         }
     ],
+    "require" : {
+        "composer/installers" : "~1.0.0",
+        "php" : ">=5.3.0",
+        "markjaquith/wp-tlc-transients" : "dev-master"
+    },
     "support"    : {
         "issues": "https://github.com/Shelob9/jp-wp-api-rest-api-client/issues",
         "source": "https://github.com/Shelob9/jp-wp-api-rest-api-client"
