Stop claiming to be Mark Jaquith. Stupid copypasta

--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
     "authors"    : [
         {
             "name"    : "Josh Pollock",
-            "homepage": "http://markjaquith.com/"
+            "homepage": "http://JoshPress.net/"
         }
     ],
     "require" : {
